# rssfeed-demo

./: .env.test  Dockerfile  LICENSE.md  README.md  cache.py  config.py  conftest.py  docker-compose.yaml  pyproject.toml
api/: auth.py  db.py  dependencies.py  errors.py  main.py  middleware.py  models.py  utils.py
api/routers/: feed.py  user.py
api/services/: feed_service.py  user_service.py
background/: celery.py  tasks.py
tests/: rss_example.xml  rss_example_updated_entries.xml  rss_example_updated_feed.xml  test_feed_service.py
